--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
     implementation 'org.thymeleaf:thymeleaf:3.1.0.M2'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha7'
 }
